--- a/app/src/main/res/layout/lowsuspend_fragment.xml
+++ b/app/src/main/res/layout/lowsuspend_fragment.xml
@@ -32,8 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_lastrun_label"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_gravity="center_horizontal" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/lowsuspend_lastrun"
@@ -54,15 +53,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_inputparameters_label"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_gravity="center_horizontal" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_glucosestatus_label"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_marginLeft="5dp" />
 
                 <TextView
                     android:id="@+id/lowsuspend_glucosestatus"
@@ -76,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_minbg_label"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_marginLeft="5dp" />
 
                 <TextView
                     android:id="@+id/lowsuspend_minbg"
@@ -99,8 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_result_label"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_gravity="center_horizontal" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/lowsuspend_result"
@@ -122,8 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/openapsma_request_label"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_gravity="center_horizontal" />
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/lowsuspend_request"
