--- a/app/src/main/res/layout/treatments_fragment.xml
+++ b/app/src/main/res/layout/treatments_fragment.xml
@@ -5,31 +5,31 @@
     tools:context=".plugins.Treatments.TreatmentsFragment">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
 
             <TextView
+                android:id="@+id/treatments_iobtotal_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/treatments_iobtotal_label_string"
-                android:id="@+id/treatments_iobtotal_label"
                 android:paddingLeft="10dp"
+                android:text="@string/treatments_iobtotal_label_string"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/treatments_iobtotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/treatments_iobtotal"
-                android:paddingLeft="10dp" />
+                android:paddingLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/treatments_iobactivitytotal_label"
@@ -37,23 +37,24 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:text="@string/treatments_iobactivitytotal_label_string"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/treatments_iobactivitytotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp" />
+                android:paddingLeft="10dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
         </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nav_refreshtreatments"
             android:id="@+id/treatments_reshreshfromnightscout"
             style="?android:attr/buttonStyle"
-            android:layout_gravity="center_horizontal" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/nav_refreshtreatments" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/treatments_recyclerview"
@@ -61,6 +62,7 @@
             android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
+
     </LinearLayout>
 
 </FrameLayout>
