--- a/app/src/main/res/layout/treatments_item.xml
+++ b/app/src/main/res/layout/treatments_item.xml
@@ -16,19 +16,31 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/treatments_datelinearlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="true"
             android:orientation="horizontal">
 
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical|right"
+                android:paddingLeft="10dp"
+                android:text="{fa-clock-o}"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/cardItemLabel" />
+
             <TextView
                 android:id="@+id/treatments_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
+                android:paddingLeft="5dp"
                 android:text="1.1.2000 18:00"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/cardObjectiveText" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/cardItemLabel"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
@@ -45,9 +57,7 @@
                 android:layout_gravity="top"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="@string/treatments_insulin_label_string"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold" />
+                android:text="@string/treatments_insulin_label_string" />
 
             <TextView
                 android:id="@+id/treatments_insulin"
@@ -55,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="30dp"
-                android:text="1.1 U" />
+                android:text="1.1 U"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/treatments_carbs_label"
@@ -64,9 +75,7 @@
                 android:layout_gravity="top"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="@string/treatments_carbs_label_string"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold" />
+                android:text="@string/treatments_carbs_label_string" />
 
             <TextView
                 android:id="@+id/treatments_carbs"
@@ -74,13 +83,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="30dp"
-                android:text="48 g" />
+                android:text="48 g"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/treatments_iob_label"
                 android:layout_width="wrap_content"
@@ -88,9 +99,7 @@
                 android:layout_gravity="top"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="@string/treatments_iob_label_string"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold" />
+                android:text="@string/treatments_iob_label_string" />
 
             <TextView
                 android:id="@+id/treatments_iob"
@@ -98,7 +107,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="30dp"
-                android:text="0.12 U" />
+                android:text="0.12 U"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/treatments_activity_label"
@@ -107,9 +117,7 @@
                 android:layout_gravity="top"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="@string/treatments_activity_string"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textStyle="bold" />
+                android:text="@string/treatments_activity_string" />
 
             <TextView
                 android:id="@+id/treatments_activity"
@@ -117,7 +125,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="30dp"
-                android:text="0.002 U" />
+                android:text="0.002 U"
+                android:textStyle="bold" />
 
 
         </LinearLayout>
